⬆️ Refactor main method